--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,55 @@ jobs:
             contents: read
         steps:
             - uses: actions/checkout@v4
+
             - name: Setup JDK 21
               uses: actions/setup-java@v4
               with:
                 distribution: 'temurin'
                 java-version: 21
+
             - name: Setup gradle
               uses: gradle/actions/setup-gradle@v3
+
+            - name: Create Docker network
+              run: docker network create cassandra-network
+
+            - name: Start Cassandra node 1
+              run: |
+                docker run -d --name cassandra-node1 \
+                  --network cassandra-network \
+                  -p 9042:9042 \
+                  -e CASSANDRA_CLUSTER_NAME=TestCluster \
+                  -e CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch \
+                  -e CASSANDRA_DC=datacenter1 \
+                  cassandra:latest
+
+            - name: Wait for node 1 to be ready
+              run: |
+                timeout 120s bash -c 'until docker exec cassandra-node1 cqlsh -e "describe cluster" >/dev/null 2>&1; do sleep 5; done'
+                echo "Cassandra node 1 is up and running"
+
+            - name: Get node 1 IP
+              run: |
+                NODE1_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' cassandra-node1)
+
+            - name: Start Cassandra node 2
+              run: |
+                docker run -d --name cassandra-node2 \
+                --network cassandra-network \
+                -e CASSANDRA_SEEDS=${NODE1_IP} \
+                -e CASSANDRA_CLUSTER_NAME=TestCluster \
+                -e CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch \
+                -e CASSANDRA_DC=datacenter1 \
+                cassandra:latest
+
+            - name: Wait for nodes to join
+              run: |
+                timeout 120s bash -c 'until docker exec cassandra-node1 nodetool status | grep -q "UN.*cassandra-node2"; do sleep 5; done'
+
+            - name: Run CQL scripts
+              run: |
+                  docker exec -i cassandra-node1 cqlsh -f /schema.cql
+
             - name: build
               run: ./gradlew build --info
